--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 python==3.9
-numpy
-pandas
-scikit-learn
-pytest
-requests
+numpy==1.24.3
+pandas==2.2.0
+scikit-learn==1.4.1.post1
+pytest==8.2.0
+requests==2.31.0
 fastapi==0.63.0
-uvicorn
-gunicorn
+uvicorn==0.29.0
+gunicorn==22.0.0
